Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@ print('levenshtein_loss', levenshtein_loss(test_dataset.Y, Y_predictions))
 print('hamming_loss', hamming_loss(test_dataset.Y, Y_predictions))
 </code></pre>
 
+<h1>
+<a id="dataset" class="anchor" href="#dataset" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataset</h1>
+
+<p>The original OCR Letter dataset of Ben Taskar can be found at: <a href="http://www.seas.upenn.edu/%7Etaskar/ocr/">http://www.seas.upenn.edu/~taskar/ocr/</a></p>
+
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
